Fix image stretching issue

--- a/src/components/ImageContainer.scss
+++ b/src/components/ImageContainer.scss
@@ -11,7 +11,7 @@
   padding: 10px;
   margin: 10px 0;
   display: flex;
-  align-items: stretch;
+  align-items: center;
   justify-content: space-between;
 }
 
